syntax = "proto3";

package delta_sharing.catalog.v1;

import "google/api/field_behavior.proto";
import "google/protobuf/struct.proto";

// Creates a new catalog instance.
message CatalogInfo {
  // Name of catalog.
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // User-provided free-form text description.
  optional string comment = 2 [(google.api.field_behavior) = OPTIONAL];

  // A map of key-value properties attached to the securable.
  optional google.protobuf.Struct properties = 3 [(google.api.field_behavior) = OPTIONAL];

  // Username of current owner of catalog.
  optional string owner = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Time at which this catalog was created, in epoch milliseconds.
  optional int64 create_at = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Username of catalog creator.
  optional string created_by = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Time at which this catalog was last updated, in epoch milliseconds.
  optional int64 update_at = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Username of user who last modified catalog.
  optional string updated_by = 8 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Unique identifier for the catalog.
  optional string id = 9 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message SchemaInfo {
  // Name of schema, relative to parent catalog.
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // Name of parent catalog.
  string catalog_name = 2 [(google.api.field_behavior) = REQUIRED];

  // User-provided free-form text description.
  optional string comment = 3 [(google.api.field_behavior) = OPTIONAL];

  // A map of key-value properties attached to the securable.
  optional google.protobuf.Struct properties = 4 [(google.api.field_behavior) = OPTIONAL];

  // Full name of schema, in form of catalog_name.schema_name.
  optional string full_name = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Username of current owner of schema.
  optional string owner = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Time at which this schema was created, in epoch milliseconds.
  optional int64 create_at = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Username of schema creator.
  optional string created_by = 8 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Time at which this schema was last updated, in epoch milliseconds.
  optional int64 update_at = 9 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Username of user who last modified schema.
  optional string updated_by = 10 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Unique identifier for the schema.
  optional string schema_id = 11 [(google.api.field_behavior) = OUTPUT_ONLY];
}
