syntax = "proto3";

package delta_sharing.tables.v1;

import "google/protobuf/struct.proto";

// The type of the table.
enum TableType {
  TABLE_TYPE_UNSPECIFIED = 0;

  MANAGED = 1;

  EXTERNAL = 2;

  // VIEW = 3;

  // MATERIALIZED_VIEW = 4;

  // STREAMING_TABLE = 5;

  // MANAGED_SHALLOW_CLONE = 6;

  // FOREIGN = 7;

  // EXTERNAL_SHALLOW_CLONE = 8;
}

enum DataSourceFormat {
  DATA_SOURCE_FORMAT_UNSPECIFIED = 0;
  DELTA = 1;
  ICEBERG = 2;
  HUDI = 3;
  PARQUET = 4;
  CSV = 5;
  JSON = 6;
  ORC = 7;
  AVRO = 8;
  TEXT = 9;
  UNITY_CATALOG = 10;
  DELTASHARING = 11;
}

message TableInfo {
  // Name of table, relative to parent schema.
  string name = 1;

  // Name of parent schema.
  string schema_name = 2;

  // Name of parent catalog.
  string catalog_name = 3;

  TableType table_type = 4;

  // Data source format of the table.
  DataSourceFormat data_source_format = 5;

  // User-provided free-form text description.
  optional string comment = 7;

  // A map of key-value properties attached to the securable.
  optional google.protobuf.Struct properties = 8;

  // Full name of table, in form of catalog_name.schema_name.table_name.
  optional string full_name = 9;

  // Username of current owner of table.
  optional string owner = 10;

  // Time at which this table was created, in epoch milliseconds.
  optional int64 create_at = 11;

  // Username of table creator.
  optional string created_by = 12;

  // Time at which this table was last updated, in epoch milliseconds.
  optional int64 update_at = 13;

  // Username of user who last modified table.
  optional string updated_by = 14;

  // Unique identifier for the table.
  optional string table_id = 15;
}
